<resources>
    <string name="app_name">Affichage films</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_popular">Popular movies</string>
    <string name="title_upcoming">Upcoming movies</string>
    <string name="title_search">Search movies</string>
    <string name="short_title_popular">Popular</string>
    <string name="short_title_upcoming">Upcoming</string>
    <string name="short_title_search">Search</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_genres">Genres:</string>
    <string name="button_search">Search</string>
    <string name="label_movies_found">movies found</string>
    <string name="label_movie_found">movie found</string>
    <string name="label_no_movies_found">No movies found</string>
    <string name="label_hint_search_movie">Search for a movie</string>
    <string name="short_title_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="label_settings_language">Change language :</string>
    <string name="bouton_settings_valider">Apply</string>
    <string name="short_title_favorites">Favorites</string>
    <string name="title_favorites">Favorites movies</string>
</resources>