<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.example.tp_affichage_films.ui.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.tp_affichage_films.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.tp_affichage_films.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.tp_affichage_films.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tp_affichage_films.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>